--- a/src/index.scss
+++ b/src/index.scss
@@ -2,12 +2,9 @@
 @import "styles/header";
 @import "styles/footer";
 @import "styles/loginForm";
+@import "styles/weather";
 
 html, body {
     font-size: 16px;
     font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
-}
-
-.alert__error {
-    max-width: 35rem;
 }
